@@ -211,6 +211,8 @@ task copyMasterSheets(type: Copy) {
 // TODO Possibly misnamed task
 compileJava {
     it.dependsOn 'copyMasterSheets'
+    it.options.compilerArgs.add('--enable-preview')
+}
 }
 
 /*
